# foreman

./: .cf-live-state.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  RELEASES.md  SECURITY.md  TESTING.md
.audit/: README.md  code-quality.md  robustness.md  security.md  technical-debt.md  test-coverage.md
.github/workflows/: ci.yml  release.yml
.project/: FOREMAN.md  HANDOFF.md  MANUAL.md  RUNBOOK.md  WORKER.md  project.toml
contrib/: README.md  run_mock_demo.sh  run_mock_mixed_demo.sh  sample_run_script.sh
contrib/codex-foreman-skill/: SKILL.md
contrib/codex-foreman-skill/agents/: openai.yaml
contrib/codex-foreman-skill/references/: CODEX_FOREMAN_API.md
contrib/demo/: .gitignore  HANDOFF.md  README.md  WORKER.md  run_demo.sh  run_mixed.sh
contrib/demo/tasks/: robustness.md  security.md
contrib/mock/: FOREMAN.md  README.md  RUNBOOK.md  WORKER.md  project.toml
contrib/mock/tasks/: code-quality.md
contrib/skill/: SKILL.md
contrib/skill/agents/: openai.yaml
contrib/skill/references/: CODEX_FOREMAN_API.md
crates/codex-api/: Cargo.toml  README.md
crates/codex-api/src/: client.rs  constants.rs  lib.rs  protocol.rs
crates/codex-api/tests/: client_integration.rs  contracts.rs  orchestration_contracts.rs  smoke.rs
dev/plans/: foreman-ux-hardcut.md  vnext-dx-plan.md
dev/reports/: agent-ux-pain-points.md
docs/: audit-remediation-runbook.md  manual.md
plans/: codex-foreman-ux-hardcut.md
reports/: agent-ux-pain-points.md
scripts/: release_gate.sh  run_audit_remediation_demo.sh  verify_action.sh
src/: app_server_client.rs  config.rs  constants.rs  events.rs  foreman.rs  main.rs  models.rs  project.rs  protocol.rs  state.rs
templates/: FOREMAN.md  HANDOFF.md  MANUAL.md  RUNBOOK.md  WORKER.md  project.toml
test/: e2e.rs  integration.rs  release.rs
test/common/: mod.rs
test/fixtures/project-generic-worktree/: FOREMAN.md  HANDOFF.md  WORKER.md
test/fixtures/project-valid/: FOREMAN.md  HANDOFF.md  RUNBOOK.md  project.toml
tests/: e2e.rs  integration.rs  release.rs
tests/common/: mod.rs
tests/fixtures/: service-invalid-auth.toml  service-invalid-default-profile.toml  service-valid.toml
tests/fixtures/project-generic-worktree/: FOREMAN.md  RUNBOOK.md  project.toml
tests/fixtures/project-invalid-config/: project.toml
tests/fixtures/project-missing-worker/: project.toml
tests/fixtures/project-valid/: WORKER.md  project.toml
