[package]
name = "codex-foreman"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/codex-api"]

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
toml = "0.8"
codex-api = { path = "crates/codex-api" }

[dev-dependencies]
tempfile = "3"
